--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_derive = "1.0.160"
 serde_json = "1.0.95"
 tokio = { version = "1.27.0", features = ["macros", "full"] }
+tokio-util = { version = "0.7.7", features = ["codec"] }
 toml = "0.7.3"
