reduce compilation size for release builds and improve input ergonomics
in release builds:
* lto is turned up to full
* panic code and unwind is stripped
* debug info is stripped
* optimisation level is modified so that compiler optimises for size, not speed
* the paralell crate count is 1(codegen_units=1), so that compilation happens serially. This is said to help lto to eliminate most bloat, while doing it in paralell like default makes parts of crates to be assembled before lto has a chance to kick in

for input:
* change the method try_recv to recv because the former doesn't yield Pole::Pending when there's no message, making the loop spinn very fast and taking up one cpu core. This one, however, interrupts the task, starting it up again only when there's a message on the channel
* fix a potential bug where the two tasks may not even start before main does, by wrapping them in the tokio::join! macro, therefore blocking the main function untill both finish, or the program is killed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ serde_json = "1.0.95"
 tokio = { version = "1.27.0", features = ["macros", "full"] }
 tokio-util = { version = "0.7.7", features = ["codec"] }
 toml = "0.7.3"
+[profile.release]
+opt-level = "z"
+debug=false
+lto = "fat"
+codegen-units = 1
+panic = "abort"
